added markdown to readme.md, added default value to the number model if one is not supplied initially

--- a/demo.html
+++ b/demo.html
@@ -23,17 +23,16 @@
     <h1>jh-angular-number-picker</h1>
 
     <h4>Number: {{demo.number}}</h4>
+    <h4>Number two: {{demo.number2}}</h4>
 
-    <jh-number-picker number="demo.number"
-                      min="0"
-                      max="100"
-                      step="5"></jh-number-picker>
+    <jh-number-picker number="demo.number" step="5"></jh-number-picker>
+    <jh-number-picker number="demo.number2" step="5"></jh-number-picker>
 
     <h3>Options</h3>
 
     <table class="table">
         <tr>
-            <th     >Option Name</th>
+            <th>Attribute</th>
             <th>Type</th>
             <th>Default Value</th>
         </tr>
